# archi-legend

./: .env.example  .gitignore  README.md  pyproject.toml
data/gt/: gt.json
eval/: ifc_to_gt.py  metrics.py  runner.py
legend/: build.py  encyclopedia.py  grid.py  normalize.py  parse_pdf.py  schema.py
llm/: approaches.py  kie_client.py
llm/prompts/: A_vlm_zeroshot.md  B_vlm_fewshot.md  C_cheap_vlm.md  D_encyclopedia.md  E_encyclopedia_frontier.md
notebooks/: legend.ipynb
paper/: paper.tex
poster/: diagram_prompts.md  poster.tex
results/: encyclopedia.json  encyclopedia.md  results.csv
